[project]
name = "dr-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gdown>=6.0.0",
    "joblib>=1.5.3",
    "matplotlib==3.10.0",
    "numpy==2.0.2",
    "pandas==2.2.2",
    "pillow==11.3.0",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "streamlit>=1.58.0",
    "timm==1.0.26",
    "torch==2.7.1",
    "torchvision==0.22.1",
]
